# supertrainer2000

./: .gitignore  README.md  example.py  example.toml  pyproject.toml  requirements.in  requirements.txt  shell.nix
examples/: basic.py  basic.toml  dpo.py  neft.py  pro.py
src/: config.py  utils.py
src/datasets/: __init__.py  datamodule.py  preprocessors.py
src/misc/: quantemb.py
src/supertrainer2k/: config.py
src/supertrainer2k/datasets/: data_collators.py  datamodule.py  preprocessors.py
src/supertrainer2k/optim/: adalite.py  dummy.py  lilith.py  scheduler.py
src/supertrainer2k/wrappers/: dpo.py  lipo.py  pro.py  wrapper.py
src/wrappers/: sft.py  wrapper.py
supertrainer2k/: __main__.py  utils.py
supertrainer2k/datasets/: data_collators.py  datamodule.py  preprocessors.py  streamingdatamodule.py
supertrainer2k/misc/: neft.py  quantemb.py
supertrainer2k/optim/: adaheavy.py  adalite.py  dummy.py  lilith.py  scheduler.py
supertrainer2k/patches/: hype.py  neft.py  quantemb.py
supertrainer2k/wrappers/: __init__.py  dpo.py  pairwise.py  pro.py  sft.py  spin.py  wrapper.py
