[tool.poetry]
name = "supertrainer2000"
version = "0.1.0"
description = ""
authors = ["Jade <jpritsk@purdue.edu>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.36.2"
datasets = "^2.16.1"
lightning = "^2.1.3"
xformers = "^0.0.23.post1"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
