[tool.poetry]
name = "supertrainer2000"
version = "0.1.0"
description = ""
authors = ["Jade <jpritsk@purdue.edu>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
datasets = "^2.16.1"
lightning = "^2.1.3"
pydantic = "^2.5.3"
flash-attn = "^2.4.2"
torch = {version = "^2.1.2+cu121", source = "cu121"}
nvidia-cuda-runtime-cu12 = "^12.3.101"

[[tool.poetry.source]]
name = "cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
